# Bebop2cpp

./: CMakeLists.txt  Drone.cpp  Drone.h  LICENSE  bebop.sdp  blackbox.ods  demo.cpp  main.cpp  readme.mkd  streamDemo.cpp  streamDemo.h
demo/: demo.cpp  fullNavData.cpp  fullNavData_one.cpp  fullNavData_two.cpp  timestamp.cpp  videoDisplay.cpp
include/: Drone.h  Fullnavdata.h
onboard/navdataserver/: Blackbox.md  MANUAL_INSTALL.md  README.md  compile.sh  install.sh  uploadfiles.sh
onboard/navdataserver/scripts/: onboard__enable_blackbox.sh  onboard__install.sh  shortpress_2.sh  shortpress_6.sh  start_server.sh
onboard/navdataserver/src/: README.md  navdataserver.c  original_license.md  startnavdataserver.sh
onboard/scripts/: onboard__enable_blackbox.sh  shortpress_2.sh  start_server.sh
res/: calib_bd2.xml
src/: Drone.cpp  Fullnavdata.cpp  Fullnavdata.h  fullnavdata.cpp  fullnavdata.h  gnuplot_i.hpp  gnuplot_iostream.h
tuto/: test_kotani.cpp  tuto1.cpp
usingInstall/: CMakeLists.txt  test.cpp
